<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sp_vision_25</name>
  <version>0.0.0</version>
  <description>sp_vision_25 core library packaged for ament/colcon builds.</description>
  <maintainer email="developer@example.com">developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>hikcamera</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rmcs_description</depend>
  <depend>rmcs_executor</depend>
  <depend>rmcs_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
