<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>week3</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2807406212@qq.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <!-- 唯一添加的依赖，为了保证正常的构建顺序 -->
  <depend>rmcs_executor</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
